Fixed a bug: URLs should contain web address, not name
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@165 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/edit.rhtml
+++ b/app/views/wiki/edit.rhtml
@@ -20,7 +20,7 @@
     <input type="text" name="author" id="authorName" value="<%= @author %>" 
         onClick="this.value == 'AnonymousCoward' ? this.value = '' : true" />
     | 
-    <%= link_to('Cancel', {:web => @web.name, :action => 'cancel_edit', :id => @page.name},
+    <%= link_to('Cancel', {:web => @web.address, :action => 'cancel_edit', :id => @page.name},
           {:accesskey => 'c'})
     %>
     <small>(unlocks page)</small>
