--- a/app/views/wiki/revision.rhtml
+++ b/app/views/wiki/revision.rhtml
@@ -26,13 +26,13 @@
   <% if @revision.next_revision %>
     <% if @revision.next_revision.number < (@page.revisions.length - 1) %>
       <%= link_to('Forward in time',
-              {:web => @web.name, :action => 'revision', :id => @page.name, 
+              {:web => @web.address, :action => 'revision', :id => @page.name, 
                :rev => @revision.next_revision.number},
               {:class => 'navlink'})
       %>
     <% else %>
       <%= link_to('Forward in time',
-              {:web => @web.name, :action => 'show', :id => @page.name},
+              {:web => @web.address, :action => 'show', :id => @page.name},
               {:class => 'navlink'})
       %>
     <% end %>
@@ -45,7 +45,7 @@
 
   <% if @revision.previous_revision %>
     <%= link_to('Back in time',
-          {:web => @web.name, :action => 'revision', :id => @page.name, 
+          {:web => @web.address, :action => 'revision', :id => @page.name, 
            :rev => @revision.previous_revision.number},
           {:class => 'navlink'})
     %>
@@ -53,7 +53,7 @@
   <% end %>
 
   | 
-  <%= link_to('See current', {:web => @web.name, :action => 'show', :id => @page.name},
+  <%= link_to('See current', {:web => @web.address, :action => 'show', :id => @page.name},
           {:class => 'navlink'})
   %>
 
@@ -69,7 +69,7 @@
   | 
   
   <%= link_to('Rollback', 
-        {:web => @web.name, :action => 'rollback', :id => @page.name, :rev => @revision.number},
+        {:web => @web.address, :action => 'rollback', :id => @page.name, :rev => @revision.number},
         {:class => 'navlink'})
   %>
   
@@ -77,7 +77,7 @@
     <small>
       | Linked from: 
       <%= @page.references.collect { |ref| 
-            link_to ref.name, :web => @web.name, :action => 'show', :id => ref.name 
+            link_to ref.name, :web => @web.address, :action => 'show', :id => ref.name 
           }.join(", ") 
       %>
     </small>
