Corrected a copy/paste bug in tests, and corresponding problems in rollback.rhtml
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@167 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/page.rhtml
+++ b/app/views/wiki/page.rhtml
@@ -46,7 +46,7 @@
   <% if @page.revisions.length > 1 %>
     | 
     <%= link_to('Back in time', 
-          {:web => @web.address, :action => 'edit', :id => @page.name, 
+          {:web => @web.address, :action => 'revision', :id => @page.name, 
            :rev => @page.revisions.length - 2},
           {:class => 'navlink', :accesskey => 'R'})
     %>
