--- a/app/views/wiki/rollback.rhtml
+++ b/app/views/wiki/rollback.rhtml
@@ -6,17 +6,24 @@
 
 <%= "<p style='color:red'>Please correct the error that caused this error in rendering:<br/><small>#{@params["msg"]}</small></p>" if @params["msg"] %>
 
-<form id="editForm" action="../save/<%= @page.url %>" method="post" onSubmit="cleanAuthorName();">
+<%= form_tag({:web => @web.address, :action => 'save', :id => @page.name},
+      {:id => 'editForm', :method => 'post', :onSubmit => 'cleanAuthorName();'})
+%>
 <p>
   <textarea name="content" style="font-size: 12px; width: 450px; height: 500px"><%= @revision.content %></textarea>
 </p>
 <p>
-    <input type="submit" value="Update"> as 
+    <input type="submit" value="Update" accesskey="u" /> as 
     <input type="text" name="author" id="authorName" value="<%= @author %>" 
-        onClick="this.value == 'AnonymousCoward' ? this.value = '' : true">
-    | <a href="../cancel_edit/<%= @page.url %>">Cancel</a> <small>(unlocks page)</small>
+        onClick="this.value == 'AnonymousCoward' ? this.value = '' : true" />
+    | 
+    <% link_to('Cancel', 
+         {:web => @web.address, :action => 'cancel_edit', :id => @page.name},
+         {:accesskey => 'c'})
+    %>
+    <small>(unlocks page)</small>
 </p>
-</form>
+<%= end_form_tag %>
 
 <%= render("#{@web.markup}_help") if @web %>
 
