Corrected some bad inglish [Gavin Sinclair]
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@175 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/admin/edit_web.rhtml
+++ b/app/views/admin/edit_web.rhtml
@@ -52,7 +52,7 @@
              width="20" /> 
       kbytes
       <em>- 
-        let wiki users to upload pictures and other files and include or link to them on wiki pages
+        allow users to upload pictures and other files and include them on wiki pages
       </em>
       <br/>
     </small>
