--- a/app/views/layouts/default.rhtml
+++ b/app/views/layouts/default.rhtml
@@ -30,6 +30,17 @@
     <%= @style_additions %>
     <%= @web ? @web.additional_style : '' %>
   </style>
+  
+  <% if @web %>
+    <link rel="alternate" type="application/rss+xml" title="<%= h @web.name %> - Headlines RSS" 
+          href="<%= url_for :controller => 'wiki', :web => @web.address, 
+                      :action => 'rss_with_headlines' %>"
+    />
+    <link rel="alternate" type="application/rss+xml" title="<%= h @web.name %> - Full Pages RSS" 
+          href="<%= url_for :controller => 'wiki', :web => @web.address, 
+                      :action => 'rss_with_content' %>"
+    />
+  <% end %>
 </head>
 
 <body>
