Fixed web password protection (was broken by earlier refactoring), also adcded some user-friendlines to it
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@191 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/login.rhtml
+++ b/app/views/wiki/login.rhtml
@@ -1,8 +1,11 @@
 <% @title = "#{@web_name} Login" %><% @hide_navigation = true %>
 
-<form action="authenticate" method="post">
-<p>
+
+<%= form_tag({ :controller => 'wiki', :action => 'authenticate', :web => @web.address},
+    {'id' => 'loginForm', 'method' => 'post'})
+%>
+  <p>
     <b>Password</b><br />
     <input type="password" name="password" />
-</p>
-</form>
+  </p>
+<%= end_form_tag %>
