Replaced web.name with web.address in navigation.rhtml links
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@193 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/navigation.rhtml
+++ b/app/views/navigation.rhtml
@@ -1,7 +1,7 @@
 <%
 def list_item(text, link_options, description, accesskey = nil)
   link_options[:controller] = 'wiki'
-  link_options[:web] = @web.name
+  link_options[:web] = @web.address
   link_to_unless_current(text, link_options, :title => description, :accesskey => accesskey) {
     content_tag('b', text, 'title' => description, 'accesskey' => accesskey, 'class' => 'navOn') 
   }
