Refactoring of chunks and rendering [Denis Mertz]
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@194 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/page.rhtml
+++ b/app/views/wiki/page.rhtml
@@ -75,13 +75,22 @@
   <% end %>
   </small>
 
-  <% if @page.references.length > 0 %>
+  <% unless @page.linked_from.empty? %>
     <small>
       | Linked from: 
-      <%= @page.references.collect { |referring_page| 
+      <%= @page.linked_from.collect { |referring_page| 
             link_to_existing_page referring_page
           }.join(", ")
       %>
+    </small>
+  <% end %>
+
+  <% if @page.included_from.length > 0 %>
+    <small>
+      | Included from: <%= @page.included_from.collect { |referring_page|
+	 link_to_existing_page referring_page
+	}.join(", ") 
+	%>
     </small>
   <% end %>
 </div>
