Removed explicit conversions of URL elements - routing does that, and it was therefore done twice - wrong
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@200 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/new.rhtml
+++ b/app/views/wiki/new.rhtml
@@ -6,7 +6,7 @@
 
 <%= render("#{@web.markup}_help") if @web %>
 
-<%= form_tag({ :action => 'save', :web => @web.address, :id => CGI.escape(@page_name)},
+<%= form_tag({ :action => 'save', :web => @web.address, :id => @page_name},
              {'id' => 'editForm', 'method' => 'post', 'onSubmit' => 'cleanAuthorName();'})
 %>
 
