--- a/app/views/admin/edit_web.rhtml
+++ b/app/views/admin/edit_web.rhtml
@@ -46,6 +46,10 @@
       <input type="checkbox" name="count_pages" <%= 'checked="on"' if @web.count_pages %> /> 
       Count pages
       <br/>
+<!-- 
+File uploads are not ready for gfeneral use, and therefore are disabled in release 0.10
+TODO Enable these input elements again after release 0.10
+
       <input type="checkbox" name="allow_uploads" <%= 'checked="on"' if @web.allow_uploads %> /> 
       Allow uploads of no more than 
       <input type="text" name="max_upload_size" value="<%= @web.max_upload_size %>" 
@@ -55,6 +59,7 @@
         allow users to upload pictures and other files and include them on wiki pages
       </em>
       <br/>
+-->
     </small>
     </p>
 
