Running on Rails footer shows only on the wiki/page view
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@207 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/page.rhtml
+++ b/app/views/wiki/page.rhtml
@@ -95,6 +95,12 @@
   <% end %>
 </div>
 
+<div id="footer">
+  <p>This site is running on <a href="http://instiki.org/">Instiki</a></p>
+  <br/>
+  <p>Powered by <a href="http://rubyonrails.com/">Ruby on Rails</a></p>
+</div>
+
 <script language="Javascript">
   function toggleChanges() {
     if (document.getElementById("changes").style.display == "none") {
