... and on wiki/published, too
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@208 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/layouts/default.rhtml
+++ b/app/views/layouts/default.rhtml
@@ -69,6 +69,14 @@
 <%= render 'navigation' unless @web.nil? || @hide_navigation %>
 <%= @content_for_layout %>
 
+<% if @show_footer %>
+    <div id="footer">
+    <p>This site is running on <a href="http://instiki.org/">Instiki</a></p>
+    <br/>
+    <p>Powered by <a href="http://rubyonrails.com/">Ruby on Rails</a></p>
+    </div>
+<% end %>
+
 </div> <!-- Content -->
 
 </div> <!-- Container -->
