--- a/app/views/wiki/page.rhtml
+++ b/app/views/wiki/page.rhtml
@@ -1,4 +1,7 @@
-<% @title = @page.plain_name %>
+<% 
+  @title = @page.plain_name 
+  @show_footer = true
+%>
 
 <div id="revision">
   <%= @page.display_content %>
@@ -93,12 +96,6 @@
 	%>
     </small>
   <% end %>
-</div>
-
-<div id="footer">
-  <p>This site is running on <a href="http://instiki.org/">Instiki</a></p>
-  <br/>
-  <p>Powered by <a href="http://rubyonrails.com/">Ruby on Rails</a></p>
 </div>
 
 <script language="Javascript">
