--- a/app/views/wiki/published.rhtml
+++ b/app/views/wiki/published.rhtml
@@ -3,6 +3,7 @@
   @hide_navigation = false
   @style_additions = ".newWikiWord { background-color: white; font-style: italic; }"
   @inline_style = true
+  @show_footer = true
 %>
 
 <%= @page.display_published %>
