Fixed links to author pages on wiki/revised_pages
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@209 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/recently_revised.rhtml
+++ b/app/views/wiki/recently_revised.rhtml
@@ -20,9 +20,9 @@
       <ul>
     <% end %>
     <li>
-      <%= link_to page.name, :web => @web.address, :action => 'show', :id => page.name %>
+      <%= link_to_existing_page page %>
       <div class="byline" style="margin-bottom: 0px">
-        by <%= page.author_link %>
+        by <%= link_to_page(page.author) %>
         at <%= page.created_at.strftime "%H:%M" %>
         <%= "from #{page.author.ip}" if page.author.respond_to?(:ip) %>
       </div>
@@ -30,3 +30,4 @@
   <% end %>
   </ul>
 <% end %>
+	
