--- a/app/views/wiki/feeds.rhtml
+++ b/app/views/wiki/feeds.rhtml
@@ -3,6 +3,12 @@
 <p>You can subscribe to this wiki by RSS and get either just the headlines of the pages that change or the entire page.</p> 
 
 <ul id="feedsList">
-  <li><a href="../rss_with_content<%= "?password=#{@web.password}" if @web.password %>">Full content (RSS 2.0)</a>
-  <li><a href="../rss_with_headlines<%= "?password=#{@web.password}" if @web.password %>">Headlines (RSS 2.0)</a>
+  <li>
+    <% unless @web.password and not @web.published %>
+      <%= link_to 'Full content (RSS 2.0)', :web => @web.address, :action => :rss_with_content %>
+    <% end %>
+  </li>
+  <li>
+    <%= link_to 'Headlines (RSS 2.0)', :web => @web.address, :action => :rss_with_headlines %>
+  </li>
 </ul>
