RSS feeds are now smart about password-protected webs
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@211 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/feeds.rhtml
+++ b/app/views/wiki/feeds.rhtml
@@ -4,7 +4,7 @@
 
 <ul id="feedsList">
   <li>
-    <% unless @web.password and not @web.published %>
+    <% if @rss_with_content_allowed %>
       <%= link_to 'Full content (RSS 2.0)', :web => @web.address, :action => :rss_with_content %>
     <% end %>
   </li>
