Autofocus in login form
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@215 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/login.rhtml
+++ b/app/views/wiki/login.rhtml
@@ -1,11 +1,14 @@
 <% @title = "#{@web_name} Login" %><% @hide_navigation = true %>
 
-
+<p>
 <%= form_tag({ :controller => 'wiki', :action => 'authenticate', :web => @web.address},
-    {'id' => 'loginForm', 'method' => 'post'})
+    { 'name' => 'loginForm', 'id' => 'loginForm', 'method' => 'post'})
 %>
-  <p>
     <b>Password</b><br />
-    <input type="password" name="password" />
-  </p>
+    <input type="password" name="password" id="password" default="yes" />
 <%= end_form_tag %>
+</p>
+
+<script language="JavaScript">
+  document.forms["loginForm"].elements["password"].focus();
+</script>
