Extracted categories menu to a helper, and got rid of hrefs
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@216 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/list.rhtml
+++ b/app/views/wiki/list.rhtml
@@ -1,12 +1,6 @@
 <% @title = "All Pages" %>
 
-<% unless @categories.empty? %>
-<div id="categories">
-  <strong>Categories</strong>: 
-  [<a href=".">Any</a>]
-  <%= @category_links.join(', ') %>
-</div>
-<% end %>
+<%= categories_menu unless @categories.empty? %>
 
 <div id="allPages" style="float: left; width: 280px; margin-right: 30px">
 <% unless @pages_that_are_orphaned.empty? && @page_names_that_are_wanted.empty? %>
