More pesky hrefs deleted
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@217 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/admin/edit_web.rhtml
+++ b/app/views/admin/edit_web.rhtml
@@ -109,7 +109,7 @@ TODO Enable these input elements again after release 0.10
     and
     <input type="submit" value="Update Web" />
     <br/><br/>
-    ...or forget changes and <a href="/create_web/">create a new web</a>
+    ...or forget changes and <%= link_to 'create a new web', :action => 'create_web' %>
   </small>
 </p>
 
