Fixed rendering, added a Mixed option (Textile + Markdown), default is Textile-only
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@222 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/admin/edit_web.rhtml
+++ b/app/views/admin/edit_web.rhtml
@@ -21,16 +21,16 @@
   <div class="inputBox, disableAutoComplete">
     Markup:
     <select name="markup">
-      <%= html_options({"Textile" => :textile, "Markdown" => :markdown, "RDoc" => :rdoc }, 
-              @web.markup) %>
+      <%= html_options({'Textile' => :textile, 'Markdown' => :markdown, 'Mixed' => :mixed, 
+              'RDoc' => :rdoc }, @web.markup) %>
     </select>
 
     &nbsp;&nbsp;
 
     Color:
     <select name="color">
-      <%= html_options({ "Green" => "008B26", "Purple" => "504685", "Red" => "DA0006", 
-                         "Orange" => "FA6F00", "Grey" => "8BA2B0" }, @web.color) %>
+      <%= html_options({ 'Green' => '008B26', 'Purple' => '504685', 'Red' => 'DA0006', 
+                         'Orange' => 'FA6F00', 'Grey' => '8BA2B0' }, @web.color) %>
     </select>
     <br/>
     <p>
