Corrected position of markup help in new.rhtml (it really should be the same template as edit.rhtml)
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@227 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/new.rhtml
+++ b/app/views/wiki/new.rhtml
@@ -4,7 +4,10 @@
   @hide_navigation = true
 %>
 
-<%= render("#{@web.markup}_help") if @web %>
+<div id="MarkupHelp" style="float: right; width: 250px; margin-top: 5px">
+  <%= render("#{@web.markup}_help") %>
+  <%= render 'wiki_words_help' %>
+</div>
 
 <%= form_tag({ :action => 'save', :web => @web.address, :id => @page_name},
              {'id' => 'editForm', 'method' => 'post', 'onSubmit' => 'cleanAuthorName();'})
