--- a/app/views/admin/edit_web.rhtml
+++ b/app/views/admin/edit_web.rhtml
@@ -119,9 +119,10 @@ TODO Enable these input elements again after release 0.10
 <h1>Other administrative tasks</h1>
 
 <%= form_tag({:controller => 'admin', :web => @web.address, :action => 'remove_orphaned_pages'},
-        {:id => 'remove_orphaned_pages'})
+        {:id => 'remove_orphaned_pages', 
+         :onSubmit => "return checkSystemPassword(document.getElementById('system_password_orphaned').value)"
+        })
 %>
-      onSubmit="return checkSystemPassword(document.getElementById('system_password_orphaned').value)">
   <p align="right">
     <small>
       Clean up by entering system password
