textarea in wiki/edit.rhtml is HTML-escaped
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@233 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/edit.rhtml
+++ b/app/views/wiki/edit.rhtml
@@ -16,7 +16,7 @@
 %>
 
 <p>
-    <textarea name="content" style="width: 450px; height: 500px"><%= @page.content %></textarea>
+    <textarea name="content" style="width: 450px; height: 500px"><%= h @page.content %></textarea>
 </p>
 <p>
     <input type="submit" value="Submit" accesskey="s"/> as 
