Escaping page title in RSS feeds (ticket:143)
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@242 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/rss_feed.rhtml
+++ b/app/views/wiki/rss_feed.rhtml
@@ -8,7 +8,7 @@
 		<ttl>40</ttl>
   <% for page in @pages_by_revision %>
 		<item>
-      <title><%= page.plain_name %></title>
+      <title><%= h page.plain_name %></title>
     <% unless @hide_description %>
       <description><%= h page.display_content %></description>
     <% end %>
