XHTML validity fixes from ticket:138 [JosephSHuang]
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@243 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/page.rhtml
+++ b/app/views/wiki/page.rhtml
@@ -98,7 +98,7 @@
   <% end %>
 </div>
 
-<script language="Javascript">
+<script language="Javascript" type="text/Javascript">
   function toggleChanges() {
     if (document.getElementById("changes").style.display == "none") {
       document.getElementById("changes").style.display  = "block";
