--- a/app/views/navigation.rhtml
+++ b/app/views/navigation.rhtml
@@ -3,7 +3,7 @@ def list_item(text, link_options, description, accesskey = nil)
   link_options[:controller] = 'wiki'
   link_options[:web] = @web.address
   link_to_unless_current(text, link_options, :title => description, :accesskey => accesskey) {
-    content_tag('b', text, 'title' => description, 'accesskey' => accesskey, 'class' => 'navOn') 
+    content_tag('b', text, 'title' => description, 'class' => 'navOn') 
   }
 end
 %>
@@ -15,14 +15,14 @@ end
     <%= list_item 'All Pages', {:action => 'list'}, 'Alphabetically sorted list of pages', 'A' %> | 
     <%= list_item 'Recently Revised', {:action =>'recently_revised'}, 
                   'Pages sorted by when they were last changed', 'U' 
-    %> | 
+    %> |
     <%= list_item 'Authors', {:action => 'authors'}, 'Who wrote what' %> | 
     <%= list_item 'Feeds', {:action => 'feeds'}, 'Subscribe to changes by RSS' %> | 
     <%= list_item 'Export', {:action => 'export'}, 
                   'Download a zip with all the pages in this wiki', 'X' 
-    %> |     
+    %> |
     <input type="text" id="searchField" name="query" style="font-size: 10px" value="Search" 
-           onClick="this.value == 'Search' ? this.value = '' : true" />
+           onfocus="if (this.value == 'Search' ) this.value = '' " />
   <% else %>
   	<%= list_item 'Home Page', {:action => 'published', :id => 'HomePage'}, 'Home, Sweet Home', 'H' %> | 
   <% end%>
