--- a/public/stylesheets/instiki.css
+++ b/public/stylesheets/instiki.css
@@ -28,22 +28,22 @@ a { color: #000; }
 a:visited { color: #666; }
 a:hover { color: #fff; background-color:#000; }
 
-h1, h2, h3 { color: #333; font-family: georgia, verdana; }
+h1, h2, h3 { color: #333; font-family: georgia, verdana, sans-serif; }
 h1 { font-size: 28px }
 h2 { font-size: 19px }
 h3 { font-size: 16px }
 
 h1#pageName {
-	margin: 5px 0px 0px 0px;
-	padding: 0px 0px 0px 0px;
-	line-height: 28px;
+  margin: 5px 0 0;
+  padding: 0;
+  line-height: 28px;
 }
 
 h1#pageName small {
-  color: grey;
-	line-height: 10px;
+  color: #444;
+  line-height: 10px;
   font-size: 10px;
-  padding: 0px;
+  padding: 0;
 }
 
 a.nav, a.nav:link, a.nav:visited { color: #000; }
@@ -53,16 +53,16 @@ li { margin-bottom: 7px }
 
 .navigation {
   margin-top: 5px;
-	font-size : 12px;
+  font-size : 12px;
   color: #999;
 }
 
 .navigation a:hover { color: #fff; background-color:#000; }
 
 .navigation a {
-	font-size: 11px;
-	color: black;
-	font-weight: bold;
+  font-size: 11px;
+  color: black;
+  font-weight: bold;
 }
 
 .navigation small a {
@@ -71,31 +71,31 @@ li { margin-bottom: 7px }
 }
   
 .navOn{
-	font-size: 11px;
-	color: grey;
-	font-weight: bold;
-	text-decoration: none;
+  font-size: 11px;
+  color: #444;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 .help {
-	font-family: verdana, arial, helvetica, sans-serif;
-	font-size: 11px;
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 11px;
 }
 
 .inputBox {
-	font-family: verdana, arial, helvetica, sans-serif;
-	font-size: 11px;
+  font-family: verdana, arial, helvetica, sans-serif;
+  font-size: 11px;
   background-color: #eee;
   padding: 5px;
   margin-bottom: 20px;
 }
 
 blockquote {
-	display: block;
-	margin: 0px 0px 20px 0px;
-	padding: 0px 30px;
-	font-size:11px;
-	line-height:17px;
+  display: block;
+  margin: 0px 0px 20px 0px;
+  padding: 0px 30px;
+  font-size:11px;
+  line-height:17px;
   font-style: italic;  
 }
 
@@ -107,7 +107,7 @@ pre {
 
 ol.setup {
   font-size: 19px;
-  font-family: georgia, verdana;
+  font-family: georgia, verdana, sans-serif;
   padding-left: 25px;
 }
 
@@ -131,7 +131,7 @@ ol.setup li {
 }
 
 .diffins, ins.diffmod {
-   background: lightgreen;
+  background: lightgreen;
 }
 
 #footer {
@@ -149,72 +149,72 @@ ol.setup li {
 }
 
 #error {
-  color: darkred;
+  color: #8b0000;
   font-style: italic;
   width: 600px;
 }
 
 #info {
-  color: darkgreen;
+  color: #006400;
   font-style: italic;
   width: 600px;
 }
 
 #TextileHelp table {
-	margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 #TextileHelp table+h3 {
-	margin-top: 11px;
+  margin-top: 11px;
 }
 
 #TextileHelp table td {
-	font-size: 11px;
-	padding: 3px;
-	vertical-align: top;
-	border-top: 1px dotted #ccc;
+  font-size: 11px;
+  padding: 3px;
+  vertical-align: top;
+  border-top: 1px dotted #ccc;
 }
 
 #TextileHelp table td.arrow {
-	padding-right: 5px;
-	padding-left: 10px;
-	color: #999;
+  padding-right: 5px;
+  padding-left: 10px;
+  color: #999;
 }
 
 #TextileHelp table td.label {
-	font-weight: bold;
-	white-space: nowrap;
-	font-size: 10px;
-	padding-right: 15px;
-	color: #000;
+  font-weight: bold;
+  white-space: nowrap;
+  font-size: 10px;
+  padding-right: 15px;
+  color: #000;
 }
 
 #TextileHelp h3 {
-	font-size: 11px;
-	font-weight: bold;
-	font-weight: normal;
-	margin: 0 0 5px 0;
-	padding: 5px 0 0 0;
+  font-size: 11px;
+  font-weight: bold;
+  font-weight: normal;
+  margin: 0 0 5px 0;
+  padding: 5px 0 0 0;
 }
 
 #TextileHelp p {
-	font-size: 10px;
+  font-size: 10px;
 }
 
 .rightHandSide {
-   float: right;
-   width: 147px;
-   margin-left: 10px;
-   padding-left: 20px;
-   border-left: 1px dotted #ccc;
+  float: right;
+  width: 147px;
+  margin-left: 10px;
+  padding-left: 20px;
+  border-left: 1px dotted #ccc;
 }
 
 .rightHandSide p {
-   font-size: 10px;
+  font-size: 10px;
 }
  
 .newsList {
-   margin-top: 20px;
+  margin-top: 20px;
 }
 
 .newsList p {
