Fixed a silly error in pubDate generation (RSS feed)
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@246 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/wiki/rss_feed.rhtml
+++ b/app/views/wiki/rss_feed.rhtml
@@ -12,7 +12,7 @@
     <% unless @hide_description %>
       <description><%= h page.display_content %></description>
     <% end %>
-      <pubDate><%= page.created_at.getgm.strftime "%a, %e %b %Y %H:%M:%S Z" %></pubDate>
+      <pubDate><%= page.created_at.getgm.strftime "%a, %d %b %Y %H:%M:%S Z" %></pubDate>
       <guid><%= url_for :only_path => false, :web => @web_name, :action => @link_action, :id => page.name %></guid>
       <link><%= url_for :only_path => false, :web => @web_name, :action => @link_action, :id => page.name %></link>
       <dc:creator><%= WikiWords.separate(page.author) %></dc:creator>
