Fixed a hard-coded link to :web/search, ticket:149
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@256 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/navigation.rhtml
+++ b/app/views/navigation.rhtml
@@ -8,8 +8,10 @@ def list_item(text, link_options, description, accesskey = nil)
 end
 %>
 
-<form id="navigationForm" class="navigation" action="../search/" method="get" style="font-size: 10px">  
-  
+<%= form_tag({ :controller => 'wiki', :action => 'search', :web => @web.address},
+             {'id' => 'navigationForm', 'class' => 'navigation', 'method' => 'get'})
+%>
+
   <% if @action_name != 'published' then %>
     <%= list_item 'Home Page', {:action => 'show', :id => 'HomePage'}, 'Home, Sweet Home', 'H' %> | 
     <%= list_item 'All Pages', {:action => 'list'}, 'Alphabetically sorted list of pages', 'A' %> | 
@@ -27,4 +29,4 @@ end
   	<%= list_item 'Home Page', {:action => 'published', :id => 'HomePage'}, 'Home, Sweet Home', 'H' %> | 
   <% end%>
 
-</form>
+<%= end_form_tag %>
