More hard-coded URI paths in form.action attributes
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@257 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/admin/create_system.rhtml
+++ b/app/views/admin/create_system.rhtml
@@ -6,7 +6,9 @@
   you'll need to do a brief one-time setup.
 </p>
 
-<form action="../create_system" id="setup" method="post" onSubmit="return validateSetup()">
+<%= form_tag({ :controller => 'admin', :action => 'create_system'},
+             {'id' => 'setup', 'method' => 'post', 'onSubmit' => 'return validateSetup()'})
+%>
 <ol class="setup">
   <li>
 
@@ -43,7 +45,7 @@
 <p align="right">
     <input type="submit" value="Setup" style="margin-left: 40px" />
 </p>
-</form>
+<%= end_form_tag %>
 
 <script>
 function proposeAddress() {
