--- a/app/views/wiki/search.rhtml
+++ b/app/views/wiki/search.rhtml
@@ -24,7 +24,7 @@
 <% end %>
 
 <% if (@results + @title_results).empty? %>
-  <h2>No pages contains "<%= @params["query"] %>" </h2>
+  <h2>No pages contain "<%= @params["query"] %>" </h2>
   <p>
     Perhaps you should try expanding your query. Remember that Instiki searches for entire 
     phrases, so if you search for "all that jazz" it will not match pages that contain these 
