Fixed error message display in admin/edit_web - Rails flash handling apparently has changed
git-svn-id: http://instiki.rubyforge.org/svn/instiki/trunk@265 6672c7b4-72ec-0310-ba2f-80f7574ec3f6

--- a/app/views/layouts/default.rhtml
+++ b/app/views/layouts/default.rhtml
@@ -46,6 +46,7 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 </head>
 
 <body>
+
 <div id="Container">
 <div id="Content">
   <h1 id="pageName">
@@ -59,8 +60,8 @@ PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     <% end %>
   </h1>
 
-<% if @flash[:error] %> <div id="error">
-    <hr/><p><%= @flash[:error].to_s %></p><hr/></div>
+<% if @error or @flash[:error] %> <div id="error">
+    <hr/><p><%= (@error || @flash[:error]) %></p><hr/></div>
 <% end %>
 
 <% if @flash[:info] %> <div id="info">
